packages/svelte/tests/compiler-errors/samples/runes-invalid-snippet-mutation/main.svelte
<svelte:options runes />

{#snippet foo(value)}
	<button onclick={() => value += 1}>click</button>
{/snippet}
